--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,58 +1,122 @@
 .header {
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.79);
-  border-radius: 1rem 1rem 0 0;
   position: relative;
-  // border-bottom: 0.1rem solid white;
+  background: rgb(20, 32, 32);
+  border-radius: 0.2rem 0.2rem 0 0;
 
-  &::after {
-    content: "";
-    // background: rgb(255, 255, 255);
-    position: absolute;
-    bottom: 0;
-    left: 6rem;
-    height: 0.08rem;
-    width: calc(100% - 6.1rem);
-    // border-bottom-width: 10rem;
-    // border-bottom: 0.1rem solid white;
-
-    background: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0.04),
-        rgb(255, 255, 255)
-      )
-      100%;
+  @include light {
+    color: grey;
   }
 
-  &__logo-container {
-    position: relative;
-    flex-basis: 50%;
-    // margin-left: 10rem;
-  }
+  &__top {
+    padding-top: 0.5rem;
+    .top-container__left {
+      display: flex;
+      flex-direction: row;
+      flex-basis: 85%;
+      margin: 0.5rem 0 1rem 2rem;
+      align-items: center;
+      background: rgb(20, 32, 32);
 
-  .logo {
-    position: absolute;
-    top: 1rem;
-    left: 0.5rem;
-    width: 5rem;
-    height: 5rem;
-    z-index: 99;
+      &-logo {
+        position: relative;
+        margin-left: 1rem;
+        flex-basis: 10rem;
+        font-weight: 400;
+        font-style: normal;
 
-    @media (max-width: $mantine-breakpoint-sm) {
-      left: -0.7rem;
-      width: 5rem;
-      height: 3rem;
+        span {
+          position: absolute;
+          top: 1rem;
+          left: 1rem;
+          font-style: italic;
+          letter-spacing: 0.3rem;
+          color: red;
+          font-size: 0.7rem;
+          padding-bottom: 0.2rem;
+          transition: 0.25s;
+
+          @include hover {
+            transform: scale(1.1);
+          }
+        }
+      }
+
+      &-text {
+        @media (max-width: $mantine-breakpoint-sm) {
+          display: none;
+        }
+
+        & span:nth-child(1)::after {
+          content: "";
+          margin: 0 1rem 0;
+          border-right: 0.1rem solid grey;
+          inset: 0;
+        }
+      }
     }
-    @media (max-width: $mantine-breakpoint-xs) {
-      top: 2.3rem;
+
+    .top-container__right {
+      display: flex;
+      flex-basis: 30%;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-end;
+      flex-wrap: nowrap;
+
+      & span:nth-child(2) {
+        padding-bottom: 0.4rem;
+      }
+
+      &-text {
+        display: flex;
+        gap: 0.5rem;
+        cursor: pointer;
+      }
+
+      @include hover {
+        color: rgb(170, 170, 170);
+      }
     }
   }
+  // .logo {
+  //   position: absolute;
+  //   top: 1rem;
+  //   left: 0.5rem;
+  //   width: 5rem;
+  //   height: 5rem;
+  //   z-index: 99;
 
+  //   @media (max-width: $mantine-breakpoint-sm) {
+  //     left: -0.7rem;
+  //     width: 5rem;
+  //     height: 3rem;
+  //   }
+  //   @media (max-width: $mantine-breakpoint-xs) {
+  //     top: 2.3rem;
+  //   }
+  // }
+
+  &__bottom {
+    .link-item {
+      border-right: 0.1rem solid rgba(120, 120, 120, 0.283);
+    }
+
+    @include dark {
+      background: rgb(34, 33, 33);
+    }
+
+    background: white;
+
+    & > * {
+      color: red;
+    }
+  }
   &__btns {
     flex-basis: 50%;
   }
 
   &__btn:last-child {
     margin-right: 1rem;
+    align-self: flex-end;
   }
 }
