--- a/client/src/components/Buttons/HeaderButtons/headerButtons.scss
+++ b/client/src/components/Buttons/HeaderButtons/headerButtons.scss
@@ -1,14 +1,13 @@
 .button {
   transition: all 0.2s;
-  color: #74c0fc;
   font-size: 1rem;
   letter-spacing: 0.2rem;
-  font-weight: 500;
+  font-weight: 700;
 
   @include light {
-    color: #74c0fc;
+    color: #252525;
     @include hover {
-      color: rgb(255, 255, 255);
+      color: rgb(106, 105, 105);
     }
   }
 
@@ -18,23 +17,21 @@
   }
 
   &::after {
+    content: ".";
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
     width: 0%;
-    content: ".";
-    color: transparent;
+    // color: transparent;
     height: 1px;
     transition: all 0.3s;
+    background: rgb(17, 135, 167);
   }
 
   &:hover::after {
     width: 100%;
-    background: white;
-  }
-
-  @include light {
+    background: rgb(174, 174, 174);
   }
 }
