--- a/client/src/components/BackgroundWave/backGroundWave.scss
+++ b/client/src/components/BackgroundWave/backGroundWave.scss
@@ -2,7 +2,7 @@
 
 html,
 body {
-  //   height: 100%;
+  height: 100%;
 }
 body {
   background: radial-gradient(
@@ -11,7 +11,6 @@ body {
     rgba(255, 254, 234, 1) 35%,
     #b7e8eb 100%
   );
-  overflow: hidden;
 }
 
 .ocean {
