body/blogcard/thoughtcard styling

--- a/client/src/components/Hero/hero.module.scss
+++ b/client/src/components/Hero/hero.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   background-size: cover;
   background-position: center;
+
   @include light {
     background-image: url("../../assets//images/hero-bg.png");
   }
@@ -34,7 +35,7 @@
   .divider {
     fill: #d9d9d9;
     @include dark {
-      fill: #161817;
+      fill: rgb(34, 33, 33);
     }
   }
 }
@@ -126,7 +127,7 @@
 
 @keyframes fadeIn-light {
   from {
-    background: rgb(67, 67, 67);
+    background: rgba(0, 0, 0, 0.608);
   }
   to {
     background: (180deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.65) 40%);
@@ -135,7 +136,7 @@
 
 @keyframes fadeIn-dark {
   from {
-    background: black;
+    background: rgba(32, 32, 32, 0.519);
   }
   to {
     background: rgba(0, 0, 0, 0.608);
