--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,6 +12,8 @@
 body {
   animation: fadeIn 0.4s linear;
 
+  transition: all 0.5s;
+
   @include light {
     background: rgb(255, 255, 255);
     background: linear-gradient(
