--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -64,17 +64,14 @@
             align-items: center;
             justify-content: flex-end;
             flex-wrap: nowrap;
+            margin-top: -9px;
+            cursor: pointer;
 
             &-text {
                 display: flex;
-                align-items: center;
-                gap: 1rem;
-                padding-bottom: 5px;
-                cursor: pointer;
-
-                @media (max-width: $mantine-breakpoint-sm) {
-                    font-size: 0.8rem;
-                }
+                // align-items: center;
+                // gap: 1rem;
+                // padding-bottom: 5px;
 
                 & span {
                     @include hover {
@@ -83,7 +80,9 @@
 
                     &:nth-child(1) {
                         border-right: 0.1rem solid red;
-                        padding-right: 1.5rem;
+                        padding-right: 1.3rem;
+                        margin-right: 1.3rem;
+                        height: 1.4rem;
                     }
                 }
 
