--- a/client/src/components/UserLoginForm/userloginform.module.scss
+++ b/client/src/components/UserLoginForm/userloginform.module.scss
@@ -10,3 +10,7 @@
     font-family: Greycliff CF, var(--mantine-font-family);
     font-weight: 900;
 }
+
+.visibilityToggle {
+    right: -2.5rem;
+}
