--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -64,13 +64,15 @@
             align-items: center;
             justify-content: flex-end;
             flex-wrap: nowrap;
-            margin-top: -9px;
+            margin-bottom: 0.8rem;
+            gap: 1rem;
+
             cursor: pointer;
 
             &-text {
                 display: flex;
+                gap: 1rem;
                 // align-items: center;
-                // gap: 1rem;
                 // padding-bottom: 5px;
 
                 & span {
@@ -81,7 +83,7 @@
                     &:nth-child(1) {
                         border-right: 0.1rem solid red;
                         padding-right: 1.3rem;
-                        margin-right: 1.3rem;
+                        // margin-right: 1.3rem;
                         height: 1.4rem;
                     }
                 }
