--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -82,13 +82,13 @@
 
                     &:nth-child(1) {
                         border-right: 0.1rem solid red;
-                        padding-right: 1.3rem;
+                        padding-right: 1rem;
                         // margin-right: 1.3rem;
                         height: 1.4rem;
                     }
                 }
 
-                .register-btn {
+                .btn {
                     color: inherit;
                     &:link,
                     &:visited {
