--- a/client/src/components/UserDashboard/profileLayout.module.scss
+++ b/client/src/components/UserDashboard/profileLayout.module.scss
@@ -1,13 +1,28 @@
 .user {
-    display: block;
-    width: 100%;
+    display: flex;
+
+    gap: 2rem;
+    align-items: center;
+
     padding: var(--mantine-spacing-md);
     color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 
+    @media (max-width: $mantine-breakpoint-sm) {
+        flex-direction: column;
+        gap: 2rem;
+        // justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
     @mixin hover {
+        cursor: none;
         background-color: light-dark(
             var(--mantine-color-gray-0),
             var(--mantine-color-dark-8)
         );
     }
 }
+
+// .group {
+//     display: flex;
+// }
