Dashboard, EditProfile and ProfileLayout state fixes, no more blinking on new data enter

--- a/client/src/components/ProfileLayout/profileLayout.module.scss
+++ b/client/src/components/ProfileLayout/profileLayout.module.scss
@@ -35,3 +35,15 @@
         // align-items: center
     }
 }
+
+.social a {
+    &:link,
+    &:visited {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    @include hover {
+        text-decoration: underline;
+    }
+}
