--- a/client/src/components/Buttons/HeaderButtons/headerButtons.scss
+++ b/client/src/components/Buttons/HeaderButtons/headerButtons.scss
@@ -1,43 +1,59 @@
 .button {
-  text-decoration: none;
-  transition: all 0.2s;
-  font-size: 1rem;
-  letter-spacing: 0.2rem;
-  font-weight: 700;
+    text-decoration: none;
+    transition: all 0.2s;
+    font-size: 1rem;
+    letter-spacing: 0.2rem;
+    font-weight: 700;
 
-  &__link-item {
-    border-right: 0.1rem solid rgba(120, 120, 120, 0.283);
-    transition: 0.5s;
+    &__link-item {
+        border-right: 0.1rem solid rgba(120, 120, 120, 0.283);
+        transition: 0.5s;
 
-    &::after {
-      content: ".";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 0%;
-      height: 1px;
-      transition: all 0.3s;
-      background: rgb(17, 135, 167);
+        &::after {
+            content: '.';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 0%;
+            height: 1px;
+            transition: all 0.3s;
+            background: rgb(17, 135, 167);
+        }
+
+        &:hover::after {
+            width: 100%;
+            background: red;
+        }
+
+        @include light {
+            color: #252525;
+            @include hover {
+                color: rgb(106, 105, 105);
+            }
+        }
+
+        @include dark {
+            @include hover {
+                color: white;
+            }
+        }
+
+        &--active {
+            border-right: 0.1rem solid rgba(120, 120, 120, 0.283);
+            text-decoration: none;
+            color: red;
+            transition: all 0.3s;
+
+            @include light {
+                @include hover {
+                    color: rgb(106, 105, 105);
+                }
+            }
+            @include hover {
+                color: white;
+            }
+        }
     }
-
-    &:hover::after {
-      width: 100%;
-      background: red;
-    }
-
-    @include light {
-      color: #252525;
-      @include hover {
-        color: rgb(106, 105, 105);
-      }
-    }
-
-    &--active {
-      border-right: 0.1rem solid rgba(120, 120, 120, 0.283);
-      text-decoration: none;
-      color: red;
-    }
-  }
 }
