--- a/client/src/components/BodyContainer/bodyContainer.scss
+++ b/client/src/components/BodyContainer/bodyContainer.scss
@@ -8,6 +8,6 @@
     min-height: 50vh;
 
     @media (max-width: $mantine-breakpoint-sm) {
-        overflow-x: hidden;
+        // overflow-x: hidden;
     }
 }
