--- a/client/src/components/HomePageBlogContainer/homePageBlogContainer.scss
+++ b/client/src/components/HomePageBlogContainer/homePageBlogContainer.scss
@@ -3,8 +3,16 @@
     padding: 5rem 5rem;
     background-color: #d9d9d9;
 
+    &--alt {
+        background-color: inherit;
+
+        @include dark {
+            background-color: inherit !important;
+        }
+    }
+
     @media (max-width: $mantine-breakpoint-sm) {
-        padding: 1rem 0rem;
+        padding: 1rem 1rem;
     }
 
     @include dark {
