--- a/client/src/components/BlogCard/blogcard.scss
+++ b/client/src/components/BlogCard/blogcard.scss
@@ -69,8 +69,8 @@
         position: absolute;
         bottom: 0.5rem;
         right: 1rem;
-        background-color: rgba(17, 16, 16, 0.39);
-
+        background-color: rgba(255, 255, 255, 0.518);
+        color: black;
         padding: 0.3rem;
         border-radius: 10%;
     }
