--- a/client/src/components/Hero/hero.module.scss
+++ b/client/src/components/Hero/hero.module.scss
@@ -1,139 +1,139 @@
 .hero {
-  position: relative;
-  background-image: url("../../assets//images/hero-bg.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  .divider {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    transform: rotate(180deg);
-  }
-
-  .divider svg {
     position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 5rem;
+    background-image: url('../../assets//images/hero-bg.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-    @media (max-width: $mantine-breakpoint-sm) {
-      height: 2rem;
+    .divider {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        overflow: hidden;
+        line-height: 0;
+        transform: rotate(180deg);
     }
-  }
 
-  .divider {
-    fill: #d9d9d9;
-    @include dark {
-      fill: rgb(34, 33, 33);
+    .divider svg {
+        position: relative;
+        display: block;
+        width: calc(100% + 1.3px);
+        height: 5rem;
+
+        @media (max-width: $mantine-breakpoint-sm) {
+            height: 2rem;
+        }
     }
-  }
+
+    .divider {
+        fill: #d9d9d9;
+        @include dark {
+            fill: rgb(34, 33, 33);
+        }
+    }
 }
 
 .container {
-  height: rem(700px);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  padding-bottom: calc(var(--mantine-spacing-xl) * 6);
-  z-index: 1;
-  position: relative;
+    display: flex;
+    z-index: 1;
+    height: rem(100px);
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: calc(var(--mantine-spacing-xl) * 6);
+    position: relative;
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    height: rem(500px);
-    padding-bottom: calc(var(--mantine-spacing-xl) * 3);
-  }
+    @media (max-width: $mantine-breakpoint-sm) {
+        height: rem(100px);
+        padding-bottom: calc(var(--mantine-spacing-xl) * 3);
+    }
 }
 
 .title {
-  @include light {
-    color: var(--mantine-color-white);
-  }
+    @include light {
+        color: var(--mantine-color-white);
+    }
 
-  @include dark {
-    color: var(--mantine-color-gray-text);
-  }
+    @include dark {
+        color: var(--mantine-color-gray-text);
+    }
 
-  font-family: "Fuzzy Bubbles", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  transform: rotate(10deg);
-  font-size: rem(60px);
-  font-weight: 900;
-  line-height: 1.1;
+    font-family: 'Fuzzy Bubbles', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    transform: rotate(10deg);
+    font-size: rem(60px);
+    font-weight: 900;
+    line-height: 1.1;
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    font-size: rem(40px);
-    line-height: 1.2;
-  }
+    @media (max-width: $mantine-breakpoint-sm) {
+        font-size: rem(20px);
+        line-height: 1.2;
+    }
 
-  @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
-    line-height: 1.3;
-  }
+    @media (max-width: $mantine-breakpoint-xs) {
+        font-size: rem(28px);
+        line-height: 1.3;
+    }
 }
 
 .description {
-  color: var(--mantine-color-white);
-  max-width: rem(600px);
+    color: var(--mantine-color-white);
+    max-width: rem(600px);
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    max-width: 100%;
-    font-size: var(--mantine-font-size-sm);
-  }
+    @media (max-width: $mantine-breakpoint-sm) {
+        max-width: 100%;
+        font-size: var(--mantine-font-size-sm);
+    }
 }
 
 .control {
-  margin-top: calc(var(--mantine-spacing-xl) * 1.5);
-  color: var(--mantine-color-black);
-  align-items: center;
+    margin-top: calc(var(--mantine-spacing-xl) * 1.5);
+    color: var(--mantine-color-black);
+    align-items: center;
 
-  @include light {
-    background: var(--mantine-color-white);
-    @include hover {
-      background: var(--mantine-color-dimmed);
+    @include light {
+        background: var(--mantine-color-white);
+        @include hover {
+            background: var(--mantine-color-dimmed);
+        }
     }
-  }
 
-  @include dark {
-    background: var(--mantine-color-gray-text);
-    @include hover {
-      background: var(--mantine-color-dimmed);
+    @include dark {
+        background: var(--mantine-color-gray-text);
+        @include hover {
+            background: var(--mantine-color-dimmed);
+        }
     }
-  }
 }
 
 .root {
-  @include light {
-    background: transparent;
-    animation: fadeIn-light 0.4s linear forwards;
-  }
+    @include light {
+        background: transparent;
+        animation: fadeIn-light 0.4s linear forwards;
+    }
 
-  @include dark {
-    animation: fadeIn-dark 0.4s linear forwards;
-  }
+    @include dark {
+        animation: fadeIn-dark 0.4s linear forwards;
+    }
 }
 
 @keyframes fadeIn-light {
-  from {
-    background: rgba(0, 0, 0, 0.608);
-  }
-  to {
-    background: (180deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.65) 40%);
-  }
+    from {
+        background: rgba(0, 0, 0, 0.608);
+    }
+    to {
+        background: (180deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.65) 40%);
+    }
 }
 
 @keyframes fadeIn-dark {
-  from {
-    background: rgba(32, 32, 32, 0.519);
-  }
-  to {
-    background: rgba(0, 0, 0, 0.608);
-  }
+    from {
+        background: rgba(32, 32, 32, 0.519);
+    }
+    to {
+        background: rgba(0, 0, 0, 0.608);
+    }
 }
