--- a/client/src/components/Hero/hero.module.scss
+++ b/client/src/components/Hero/hero.module.scss
@@ -1,10 +1,30 @@
+$color-blue: #83af9b;
+$color-green: #c8c8a9;
+$color-brown: #774f38;
+$color-beige: #ece5ce;
+$color-yellow: #f9cdad;
+$color-pink: #fe4365;
+
 .hero {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    // align-items: center;
+    padding: 10rem;
     position: relative;
     background-image: url('../../assets//images/hero-bg.png');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @media (max-width: $mantine-breakpoint-md) {
+        padding: 5rem 3rem 8rem;
+    }
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        padding: 5rem 1.5rem 7rem;
+    }
 
     .divider {
         position: absolute;
@@ -36,78 +56,91 @@
 }
 
 .container {
-    display: flex;
-    z-index: 1;
-    height: rem(100px);
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: calc(var(--mantine-spacing-xl) * 6);
     position: relative;
+    z-index: 1;
+    padding: 2rem;
+    border-radius: 11px;
+    text-transform: uppercase;
+    font-family: 'Baloo 2', cursive;
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    box-shadow: 20px 20px #83af9b86;
+    animation: float 5s ease-in-out infinite;
 
     @media (max-width: $mantine-breakpoint-sm) {
-        height: rem(100px);
-        padding-bottom: calc(var(--mantine-spacing-xl) * 3);
+        padding: 1rem;
     }
-}
 
-.title {
     @include light {
-        color: var(--mantine-color-white);
+        background-color: #d9d9d9;
     }
 
     @include dark {
-        color: var(--mantine-color-gray-text);
+        box-shadow: 20px 20px rgba(89, 89, 89, 0.422);
+        background-color: #959595;
+        color: rgb(0, 0, 0);
     }
-
-    font-family: 'Fuzzy Bubbles', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    transform: rotate(10deg);
-    font-size: rem(60px);
-    font-weight: 900;
-    line-height: 1.1;
 
     @media (max-width: $mantine-breakpoint-sm) {
-        font-size: rem(20px);
-        line-height: 1.2;
-    }
-
-    @media (max-width: $mantine-breakpoint-xs) {
-        font-size: rem(28px);
-        line-height: 1.3;
+        font-size: 12px;
+        // height: rem(100px);
+        // padding: 1rem 2rem 2rem;
     }
 }
 
-.description {
-    color: var(--mantine-color-white);
-    max-width: rem(600px);
+.avatar {
+    display: block;
+    text-shadow: 22px 22px $color-blue;
+    box-shadow: 20px 20px #83af9b86;
+    padding: 0 2px 2px 0;
+    border-radius: 2rem;
+    font-weight: bold;
 
-    @media (max-width: $mantine-breakpoint-sm) {
-        max-width: 100%;
-        font-size: var(--mantine-font-size-sm);
-    }
-}
-
-.control {
-    margin-top: calc(var(--mantine-spacing-xl) * 1.5);
-    color: var(--mantine-color-black);
-    align-items: center;
+    width: 55px;
+    height: 2rem;
+    bottom: -2.5rem;
+    left: 0;
+    transform: translatey(0px);
+    animation: float2 5s ease-in-out infinite;
 
     @include light {
-        background: var(--mantine-color-white);
-        @include hover {
-            background: var(--mantine-color-dimmed);
-        }
+        background-color: #d9d9d9;
     }
-
     @include dark {
-        background: var(--mantine-color-gray-text);
-        @include hover {
-            background: var(--mantine-color-dimmed);
-        }
+        background-color: #959595;
+        text-shadow: 22px 22px rgba(89, 89, 89, 0.422);
+        box-shadow: 22px 22px rgba(89, 89, 89, 0.422);
     }
 }
+
+// .title {
+//     @include light {
+//         color: var(--mantine-color-white);
+//     }
+
+//     @include dark {
+//         color: var(--mantine-color-gray-text);
+//     }
+
+//     // font-family: 'Fuzzy Bubbles', sans-serif;
+//     // font-weight: 400;
+//     // font-style: normal;
+//     // transform: rotate(10deg);
+//     // font-size: rem(60px);
+//     // font-weight: 900;
+//     // line-height: 1.1;
+
+//     @media (max-width: $mantine-breakpoint-sm) {
+//         font-size: rem(20px);
+//         line-height: 1.2;
+//     }
+
+//     @media (max-width: $mantine-breakpoint-xs) {
+//         font-size: rem(28px);
+//         line-height: 1.3;
+//     }
+// }
 
 .root {
     @include light {
@@ -135,5 +168,35 @@
     }
     to {
         background: rgba(0, 0, 0, 0.608);
+    }
+}
+
+@keyframes float {
+    0% {
+        transform: translatey(0px);
+        transform: scale(1);
+    }
+    50% {
+        transform: translatey(-20px);
+    }
+    100% {
+        transform: translatey(0px);
+    }
+}
+
+@keyframes float2 {
+    0% {
+        line-height: 30px;
+        transform: translatey(0px);
+    }
+    55% {
+        transform: translatey(-20px);
+    }
+    60% {
+        line-height: 10px;
+    }
+    100% {
+        line-height: 30px;
+        transform: translatey(0px);
     }
 }
