created separate file for thought inside Hero

--- a/client/src/components/Hero/hero.module.scss
+++ b/client/src/components/Hero/hero.module.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    min-height: 15rem;
     padding: 10rem 5rem 12rem 5rem;
     position: relative;
     background-image: url('../../assets//images/hero-bg.png');
