--- a/client/src/components/AddComment/addcomment.scss
+++ b/client/src/components/AddComment/addcomment.scss
@@ -1,3 +1,11 @@
+.comments {
+    margin-bottom: 2rem;
+
+    &:not(:last-child) {
+        border-bottom: 1px solid #a7a7a7;
+        padding-bottom: 1rem;
+    }
+}
 .add-comment {
     width: 50%;
     border-bottom: 2px solid #f51c40;
