--- a/client/src/components/AddComment/addcomment.scss
+++ b/client/src/components/AddComment/addcomment.scss
@@ -2,12 +2,12 @@
     margin-bottom: 2rem;
 
     &:not(:last-child) {
-        border-bottom: 1px solid #a7a7a7;
+        border-bottom: 1px solid hsla(0, 0%, 65%, 0.137);
         padding-bottom: 1rem;
     }
 }
 .add-comment {
-    width: 50%;
+    width: 55%;
     border-bottom: 2px solid #f51c40;
     transition: all 0.3s ease-in-out;
 
@@ -15,6 +15,16 @@
         border-bottom: 3px solid #f51c40;
         width: 65%;
         transition: all 0.3s ease-in-out;
+    }
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        width: 65%;
+
+        &--selected {
+            border-bottom: 3px solid #f51c40;
+            width: 85%;
+            transition: all 0.3s ease-in-out;
+        }
     }
 }
 
