--- a/client/src/components/BlogLayout/bloglayout.scss
+++ b/client/src/components/BlogLayout/bloglayout.scss
@@ -38,6 +38,10 @@
         &--photo {
             height: 8rem;
             width: 8.5rem;
+            @media (max-width: $mantine-breakpoint-sm) {
+                height: 5rem;
+                width: 5.5rem;
+            }
         }
         &--name {
             font-weight: 700;
