--- a/client/src/components/BlogLayout/bloglayout.scss
+++ b/client/src/components/BlogLayout/bloglayout.scss
@@ -7,7 +7,14 @@
     }
 }
 .blogcontainer {
+    display: flex;
     margin-bottom: 2rem;
+    display: flex;
+
+    @media (max-width: $mantine-breakpoint-sm) {
+        flex-direction: column;
+    }
+
     &__body {
         flex-direction: column;
         font-size: 1.2rem;
